--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
 </head>
 <body>
 
-  <!-- Your code here -->
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="">
+
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="Lion yawning">
+
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="Lion yawning" title="I'm gonna eat you">
 
 </body>
 </html>
